micronfig_macros/tests/sources/wrong_syntax_type.stderr
error: expected `,`
 --> tests/sources/wrong_syntax_type.rs:2:12
  |
2 |     GARASAUTO String,
  |               ^^^^^^

error[E0425]: cannot find function, tuple struct or tuple variant `GARASAUTO` in this scope
 --> tests/sources/wrong_syntax_type.rs:6:19
  |
6 |     println!("{:?}", GARASAUTO())
  |                      ^^^^^^^^^ not found in this scope
